Fix animations & footer icon alignment

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -28,6 +28,10 @@ footer {
     &:hover {
       color: $color-tertiary;
     }
+
+    > i {
+      width: 1.5rem;
+    }
   }
 
   ul {
