--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -76,7 +76,7 @@
 
   .heading {
     display: flex;
-    align-items: baseline;
+    align-items: flex-start;
     justify-content: space-between;
 
     h1 {
@@ -89,8 +89,14 @@
   }
 
   @keyframes card-apparition {
-    from {opacity: 0}
-    to {opacity: 1}
+    from {
+      transform: translateY(10px);
+      opacity: 0
+    }
+    to {
+      transform: translateY(0);
+      opacity: 1
+    }
   }
 
   .menu-group {
